--- a/config-sync/clusterregistry/config-management.yaml
+++ b/config-sync/clusterregistry/config-management.yaml
@@ -1,7 +1,7 @@
 kind: Cluster
 apiVersion: clusterregistry.k8s.io/v1alpha1
 metadata:
-  name: anthos-on-eks
+  name: anthos-on-eks-2
   labels:
     environment: dr
     location: ap-southeast-1
