--- a/config-sync/namespaces/boa/bank-of-anthos-sa.yaml
+++ b/config-sync/namespaces/boa/bank-of-anthos-sa.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   annotations:
-    iam.gke.io/gcp-service-account: anthos-on-gcp@gcp-aws-multi-mesh.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: anthos@anthos-multi-cloud-v2.iam.gserviceaccount.com
   name: bank-of-anthos
   namespace: boa
